<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="StatsEvent" Id="{1a3b8dda-23c9-4198-8a1f-903a786a1df9}">
    <Declaration><![CDATA[TYPE StatsEvent :
STRUCT
	TimeStamp: TimeStamp;
	EType: DINT;
	Data: ARRAY [0..4] OF REAL;
	StringData: ARRAY [0..3] OF STRING;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>